public/css/application.css
/* ... */
  @media screen and (max-width: 1100px) {
    .story__body__content__metrics__number {
      float: left;
      display: block;
      margin-right: 3.44828%;
      width: 100%;
      margin-bottom: 0.5em; }
      .story__body__content__metrics__number:last-child {
        margin-right: 0; } }

.story__body__content__metrics__description {
  font-family: "proxima-nova", "Proxima Nova", Helvetica, sans-serif;
  float: left;
  display: block;
  margin-right: 3.44828%;
  width: 65.51724%; }
  .story__body__content__metrics__description:last-child {
    margin-right: 0; }
  @media screen and (max-width: 1100px) {
    .story__body__content__metrics__description {
      float: left;
      display: block;
      margin-right: 3.44828%;
      width: 100%; }
      .story__body__content__metrics__description:last-child {
        margin-right: 0; } }

ul.story__body__content__links li {
  float: left;
  display: block;
  margin-right: 3.44828%;
  width: 31.03448%;
  padding-top: 1em;
  padding-bottom: 1em; }
  ul.story__body__content__links li:last-child {
    margin-right: 0; }
  @media screen and (max-width: 750px) {
    ul.story__body__content__links li {
      float: left;
      display: block;
      margin-right: 3.44828%;
      width: 100%; }
      ul.story__body__content__links li:last-child {
        margin-right: 0; } }
  @media screen and (max-width: 480px) {
    ul.story__body__content__links li {
      padding-top: 0.5em;
      padding-bottom: 0.5em; } }

a.story__body__content__link--header {
  text-decoration: none;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  background-color: #004b6a;
  color: white;
  padding: 10px 10px;
  font-family: "proxima-nova", "Proxima Nova", Helvetica, sans-serif;
  margin-top: 1em;
  display: inline-block;
  line-height: 1.3;
  -webkit-transition: opacity 0.08s ease-in 0s;
  -moz-transition: opacity 0.08s ease-in 0s;
  transition: opacity 0.08s ease-in 0s; }
  @media screen and (max-width: 750px) {
    a.story__body__content__link--header {
      margin-top: 0.5em; } }

a.story__body__content__link--header:hover {
  opacity: 0.7; }

li.story__body__content__link--news a:before {
  font-family: "foundation-icons";
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  text-decoration: inherit;
  content: "\f163";
  margin-right: 10px; }
  @media screen and (max-width: 750px) {
    li.story__body__content__link--news a:before {
      display: none; } }

li.story__body__content__link--video a:before {
  font-family: "foundation-icons";
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  text-decoration: inherit;
  content: "\f198";
  margin-right: 10px; }
  @media screen and (max-width: 750px) {
    li.story__body__content__link--video a:before {
      display: none; } }

li.story__body__content__link--github a:before {
  font-family: "foundation-icons";
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  text-decoration: inherit;
  content: "\f1c9";
  margin-right: 10px; }
  @media screen and (max-width: 750px) {
    li.story__body__content__link--github a:before {
      display: none; } }

li.story__body__content__link--blog a:before {
  font-family: "foundation-icons";
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  text-decoration: inherit;
  content: "\f18e";
  margin-right: 10px; }
  @media screen and (max-width: 750px) {
    li.story__body__content__link--blog a:before {
      display: none; } }

li.story__body__content__link--app a:before {
  font-family: "foundation-icons";
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  text-decoration: inherit;
  content: "\f179";
  margin-right: 10px; }
  @media screen and (max-width: 750px) {
    li.story__body__content__link--app a:before {
      display: none; } }

.story__body__content__credit {
  width: 100%;
  overflow: auto;
  padding-top: 3em; }
  @media screen and (max-width: 750px) {
    .story__body__content__credit {
      padding-top: 1em; } }

.story__body__content__credit p {
  font-size: 14.4px;
  display: inline-block;
  padding-top: 10px;
  border-top: 1px solid rgba(0, 0, 0, 0.2); }

.opener {
  position: relative; }

.opener__header {
  background-color: #004b6a;
  color: white;
  padding-top: 3em;
  padding-bottom: 7.5em;
  display: block; }
  .opener__header::after {
    clear: both;
    content: "";
    display: table; }
  @media screen and (max-width: 480px) {
    .opener__header {
      padding-top: 2.25em;
      padding-bottom: 6em; } }

.opener__header * {
  color: white;
  text-align: center; }

.opener__header__content {
  float: left;
  display: block;
  margin-right: 3.44828%;
  width: 65.51724%;
  margin-left: 17.24138%; }
  .opener__header__content:last-child {
    margin-right: 0; }
  @media screen and (max-width: 750px) {
    .opener__header__content {
      float: left;
      display: block;
      margin-right: 3.44828%;
      width: 82.75862%;
      margin-left: 8.62069%; }
      .opener__header__content:last-child {
        margin-right: 0; } }

.opener__header__content p {
  font-style: italic; }

.opener__header__content h1 {
  margin-top: 0.25em; }

.opener__image {
  width: 100%; }

.opener__image img {
  margin: 0 auto;
  margin-top: -150px;
  width: 50%;
  display: block; }
  @media screen and (max-width: 750px) {
    .opener__image img {
      margin-top: -120px;
      width: 80%; } }
/* ... */

